<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/game_dl_tablayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/game_dl_tab_minecraft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minecraft" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/game_dl_tab_forge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forge" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/game_dl_tab_optfine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optfine" />
    </com.google.android.material.tabs.TabLayout>

    <Spinner
        android:id="@+id/game_dl_chooser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/game_dl_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_dl_tablayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_dl_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_dl_chooser" />

</androidx.constraintlayout.widget.ConstraintLayout>