<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:nextFocusRight="@+id/file_action"
    app:cardCornerRadius="0dp"
    app:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.exthmui.minejlauncher.ui.OnlineImageView
            android:id="@+id/update_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:contentDescription="@string/file_card_background"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="@id/update_botttom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/build_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:alpha="0.87"
            android:drawablePadding="8dp"
            android:maxLines="1"
            android:paddingBottom="8sp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/minecraft" />

        <TextView
            android:id="@+id/build_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/build_version"
            tools:text="01 January 2020" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/ProgressBar_Scale"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            android:paddingTop="4sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/file_btns"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/build_date"
            tools:layout_constraintTop_toBottomOf="@id/build_date"
            tools:progress="16"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/build_date"
            tools:layout_constraintStart_toStartOf="parent"
            tools:text="46.8 of 300 PB (3 years left) • 15.6%"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/build_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_round"
            android:gravity="center_vertical"
            android:paddingTop="0sp"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/build_date"
            tools:text="300 PB"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/file_btns"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/build_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/file_action"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:background="@drawable/ripple_round"
                android:contentDescription="@string/image_of_control_button"
                android:src="@drawable/ic_pause"
                tools:background="?android:attr/selectableItemBackgroundBorderless" />

            <ImageButton
                android:id="@+id/show_introduction"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:background="@drawable/ripple_round"
                android:contentDescription="@string/icon_of_show_introduction_button"
                android:src="@drawable/ic_expand_more" />
        </LinearLayout>

        <Space
            android:id="@+id/update_botttom"
            android:layout_width="0dp"
            android:layout_height="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/build_size" />

        <RelativeLayout
            android:id="@+id/introduction_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_round"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/build_size">

            <TextView
                android:id="@+id/introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/introductions" />

        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginStart="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introduction_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
